Fix user-panel was covered issue

--- a/invest-easy/src/app/app.component.scss
+++ b/invest-easy/src/app/app.component.scss
@@ -10,6 +10,7 @@
   right: 0;
   left: 0;
   height: 4rem;
+  z-index: 2; /* make sure header nav always be top*/
 }
 
 .app-content {
